@@ -58,6 +58,12 @@ GNU coreutils NEWS                                    -*- outline -*-
   'cp -fl A B' no longer remove B before creating the new link.
   That is, there is no longer a brief moment when B does not exist.
 
+** New features
+
+  expand and unexpand now support specifying a tab size to use
+  after explicitly specified tab stops, by prefixing the last
+  specified number like --tabs=2,4,/8.
+
 
 * Noteworthy changes in release 8.26 (2016-11-30) [stable]
 
